# pipeline-agent-builder

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt  run.py
.github/workflows/: ci.yml
docker/: init-db.sql  ollama-init.sh
frontend/: .gitignore  Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: AgentCard.module.css  AgentCard.tsx  AgentEditor.module.css  AgentEditor.tsx  ChatPanel.module.css  ChatPanel.tsx  DraggableDashboard.module.css  DraggableDashboard.tsx  ExecutionGraph.module.css  ExecutionGraph.tsx  KnowledgePanel.module.css  KnowledgePanel.tsx  LogPanel.module.css  LogPanel.tsx  MCPServerManager.module.css  MCPServerManager.tsx  PipelineEditor.module.css  PipelineEditor.tsx  ResultPanel.module.css  ResultPanel.tsx  SettingsPanel.module.css  SettingsPanel.tsx  TaskInput.module.css  TaskInput.tsx  TeamEditor.module.css  TeamEditor.tsx
src/: __init__.py  config.py  crypto.py  llm.py  main.py  prompts.py  registry.py  schemas.py  trace.py  types.py
src/agents/: __init__.py  base.py  reflective.py  supervisor.py
src/agents/workers/: __init__.py  coder.py  researcher.py  writer.py
src/api/: __init__.py  app.py  mcp_routes.py  routes.py  websocket.py
src/context/: __init__.py  summarization.py
src/graph/: __init__.py  pipeline_builder.py  workflow.py
src/human/: __init__.py  approval.py
src/knowledge/: __init__.py  chunking.py  ingestion.py  retriever.py
src/mcp/: __init__.py  client.py  tools.py
src/memory/: __init__.py  checkpointer.py  vector_store.py
src/storage/: __init__.py  models.py  repository.py
src/tools/: __init__.py  code.py  documents.py  factory.py  knowledge.py  plugins.py  search.py
src/utils/: __init__.py  agent_factory.py
tests/: __init__.py  conftest.py  fixtures.py  test_agents.py  test_api.py  test_api_endpoints.py  test_document_tools.py  test_human_approval.py  test_ingestion.py  test_knowledge_tools.py  test_mcp_client.py  test_mcp_routes.py  test_pipeline_builder.py  test_reflective_agent.py  test_repository.py  test_routing_evals.py  test_tools_code.py  test_tools_factory.py  test_workflow.py  test_workflow_extended.py
