[project]
name = "agentic-ai-template"
version = "1.0.0"
description = "Multi-agent template with LangGraph - supports OpenAI, Ollama, Google, Anthropic"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=1.0.0"]
google = ["langchain-google-genai>=4.0.0"]
anthropic = ["langchain-anthropic>=1.3.0"]
memory = ["langchain-chroma>=1.1.0", "chromadb>=1.3.0"]
sandbox = ["e2b-code-interpreter>=2.4.0"]
search = ["langchain-community>=0.4.0", "tavily-python>=0.7.0"]
format = ["black>=25.0.0"]
mcp = ["langchain-mcp-adapters>=0.1.0"]
all = [
    "langchain-ollama>=1.0.0",
    "langchain-google-genai>=4.0.0",
    "langchain-anthropic>=1.3.0",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.3.0",
    "e2b-code-interpreter>=2.4.0",
    "langchain-community>=0.4.0",
    "tavily-python>=0.7.0",
    "black>=25.0.0",
    "langchain-mcp-adapters>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/api/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:langsmith.*:",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:",
]
